# diagonalize

./: .env.example  .gitignore  README.md  package.json
backend/: .gitignore  Dockerfile  README.md  endpoint.py  profile_contract.py  pyproject.toml  requirements.txt  server.py  supervisord.conf
backend/app/: main.py
contracts/: ProfileStorage.sol
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/health/: page.tsx
frontend/app/test/: page.tsx
frontend/components/: auth-form.tsx  createPasskey.ts  dashboard-header.tsx  medical-notes-editor.tsx  post-header.tsx  post.tsx  verification-code.tsx
frontend/lib/: api.ts  button-variants.ts  utils.ts
src/: index.ts
